# dawn_cli

./: Cargo.toml  README.md
docs/: db.md  references.md
src/: main.rs
src/sql/: create_schema.sql  test.sql
